buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://plugins.gradle.org/m2/" }
        jcenter()
        google()
    }
    dependencies {
        classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
        classpath "org.projectlombok:lombok:1.16.20"
		classpath "com.fasterxml.jackson.core:jackson-core:2.9.5"
		classpath "com.fasterxml.jackson.core:jackson-databind:2.9.5"
		classpath "com.fasterxml.jackson.core:jackson-annotations:2.9.5"
        classpath "org.apache.logging.log4j:log4j-api:2.11.1"
  		classpath "org.apache.logging.log4j:log4j-core:2.11.1"
  		classpath "com.maxmind.geoip2:geoip2:2.12.0"
  		classpath "com.maxmind.db:maxmind-db:1.2.2"
  		classpath "org.springframework.boot:spring-boot-starter-web:2.1.1.RELEASE"
  		classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.7"
  	    classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE"
    }
}

allprojects {
    apply plugin: "eclipse"
    apply plugin: "idea"
    apply plugin: "org.sonarqube"

    version = '1.0'
    ext {
        appName = "multi-bomberman"
        gdxVersion = '1.9.8'
        raspberryGdxVersion = '1.9.8.rpi-SNAPSHOT'
        roboVMVersion = '2.3.3'
        box2DLightsVersion = '1.4'
        ashleyVersion = '1.7.0'
        aiVersion = '1.8.0'
    }

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "http://repository.abstracthorizon.org/maven2/abstracthorizon.snapshot/" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
        maven { url "https://raw.githubusercontent.com/natdan/libgdx/mvn-repo/" }
    }
}

project(":desktop") {
    apply plugin: "java"
    dependencies {
        compile project(":core")
        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
        compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
    }
}

project(":editor") {
    apply plugin: "java"
    dependencies {
        compile project(":common")
        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
        compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
        compile "org.apache.logging.log4j:log4j-api:2.11.1"
  		compile "org.apache.logging.log4j:log4j-core:2.11.1"
    }
}


project(":server") {
    apply plugin: "java"
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'
	
	sourceCompatibility = 1.8
	targetCompatibility = 1.8
	
	bootJar {
    	baseName = 'MultiBombermanServer'
	    version =  '1.0.0'
	}
	
    dependencies {
        compile project(":common")
        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
        compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
        compile "org.apache.logging.log4j:log4j-api:2.11.1"
  		compile "org.apache.logging.log4j:log4j-core:2.11.1"
  		compile "com.maxmind.geoip2:geoip2:2.12.0"
  		compile "com.maxmind.db:maxmind-db:1.2.2"
  		compile "org.springframework.boot:spring-boot-starter-web:2.1.4.RELEASE"
    }
}

project(":raspberry") {
    apply plugin: "java"
    dependencies {
        compile project(":core")
       	compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$raspberryGdxVersion"
        compile "com.badlogicgames.gdx:gdx-backend-jogamp:$raspberryGdxVersion"
        compile "com.badlogicgames.gdx:gdx-platform:$raspberryGdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-box2d-platform:$raspberryGdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-bullet-platform:$raspberryGdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-freetype-platform:$raspberryGdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-controllers-desktop:$raspberryGdxVersion"
        compile "com.badlogicgames.gdx:gdx-controllers-platform:$raspberryGdxVersion:natives-desktop"
        compile "com.badlogicgames.gdx:gdx-tools:$raspberryGdxVersion"
    }
}

project(":core") {
    apply plugin: "java"
    dependencies {
    	compile project(":common")
    	def task = gradle.startParameter.taskNames[0] ?: ""
        if(task.startsWith("raspberry")){
    		println "start with raspberry";
	        compile "com.badlogicgames.gdx:gdx:$raspberryGdxVersion"
	        compile "com.badlogicgames.gdx:gdx-box2d:$raspberryGdxVersion"
	        compile "com.badlogicgames.gdx:gdx-bullet:$raspberryGdxVersion"
	        compile "com.badlogicgames.gdx:gdx-freetype:$raspberryGdxVersion"
	        compile "com.badlogicgames.gdx:gdx-controllers:$raspberryGdxVersion"
		}else{
			compile "com.badlogicgames.gdx:gdx:$gdxVersion"
	        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
	        compile "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
	        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
	        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
		}
		compile "org.projectlombok:lombok:1.16.20"
		compile "com.fasterxml.jackson.core:jackson-core:2.9.5"
		compile "com.fasterxml.jackson.core:jackson-databind:2.9.5"
		compile "com.fasterxml.jackson.core:jackson-annotations:2.9.5"
		compile "org.bitlet:weupnp:0.1.4"
    }
}

project(":common") {
    apply plugin: "java"
    dependencies {
    	def task = gradle.startParameter.taskNames[0] ?: ""
        if(task.startsWith("raspberry")){
    		println "start with raspberry";
     		compile "com.badlogicgames.gdx:gdx:$raspberryGdxVersion"
	        compile "com.badlogicgames.gdx:gdx-box2d:$raspberryGdxVersion"
	        compile "com.badlogicgames.gdx:gdx-bullet:$raspberryGdxVersion"
	        compile "com.badlogicgames.gdx:gdx-freetype:$raspberryGdxVersion"
	        compile "com.badlogicgames.gdx:gdx-controllers:$raspberryGdxVersion"
	    }else{
	        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
	        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
	        compile "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
	        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
	        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
		}
		compile "org.projectlombok:lombok:1.16.20"
		compile "com.fasterxml.jackson.core:jackson-core:2.9.5"
		compile "com.fasterxml.jackson.core:jackson-databind:2.9.5"
		compile "com.fasterxml.jackson.core:jackson-annotations:2.9.5"
		compile "org.bitlet:weupnp:0.1.4"
    }
}

tasks.eclipse.doLast {
    delete ".project"
}